--- a/MvcAzureCoreSaSTablesStorage/MvcAzureCoreSaSTablesStorage.csproj
+++ b/MvcAzureCoreSaSTablesStorage/MvcAzureCoreSaSTablesStorage.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<NoWarn>1701;1702;8618;8600;8603;8604;8602;8605;8601</NoWarn>			
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.8.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
