--- a/MvcAzureCoreSaSTablesStorage/appsettings.json
+++ b/MvcAzureCoreSaSTablesStorage/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiUrls": {
+    "ApiTokenSaS": "https://localhost:7225/"
+  }
 }
